2004-04-14  Wakaba  <wakaba@suika.fam.cx>

	* package-info.src: Some new variables.

	* Makefile (%.xpi): Make install-res.en.inf.

	* package-info.src (package-version-number): Changed to 1.3.
	* .htaccess: New.

2004-03-10  Wakaba  <wakaba@suika.fam.cx>

	* .cvsignore: New file.

	* Makefile (REPPL_DIR): Fix path.
	(clean): Cleaning deeper directories, too.

2003-07-06  Wakaba  <w@suika.fam.cx>

	* install-res.en.inf, install-js.in, replace.pl: Removed.  (Moved to ../tool/.)
	* Makefile: Updated.

2003-07-06  Wakaba  <w@suika.fam.cx>

	* Makefile, package-info.src, install.js.in, replace.pl: New files.
	* install.js: Removed.
	* install-res.en.inf: New.
	* doc/: New directory.

2003-03-04  Wakaba  <w@offweb.ddo.jp>

	* navlinksidebar.jar!/content/sidebar.html#/html/head/script: Add link types.